<?xml version="1.0"?>
<package format="3">
  <name>tesseract_python</name>
  <version>0.5.1</version>
  <description>The tesseract_python package</description>
  <maintainer email="wason@wasontech.com">John Wason</maintainer>
  <license>Apache 2.0</license>
  <author >John Wason</author>

  <!-- Following recommendations of REP 136 -->
  <exec_depend>catkin</exec_depend>
  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>ros_industrial_cmake_boilerplate</build_depend>
  <depend>trajopt</depend>
  <depend>tesseract</depend>
  <depend>tesseract_planning</depend>
  <depend>libjsoncpp-dev</depend>

  <depend condition="$ROS_PYTHON_VERSION == 2">python</depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 2">python-dev</build_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-pytest</test_depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-dev</build_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-pytest</test_depend>
  <build_depend>swig</build_depend>

  <export>    
    <build_type>cmake</build_type>
  </export>

</package>
